# wordcrab

./: .dir-locals.el  .gitignore  ChangeLog.md  Client.hs  LICENSE  Planning.org  README.md  Server.hs  Wordcrab.cabal  cabal.fish  format.fish  package.yaml  release.nix  scrabble.hs  shell.nix  stack.yaml
app/: Main.hs
app/client/: Main.hs
app/server/: Main.hs
src/: Board.hs  NewBoard.hs  Planning.org  Player.hs  Scrabble.hs  Server.hs  Test.hs  Tiles.hs
src/Wordcrab/: API.hs  Board.hs  Brick.hs  Client.hs  GameState.hs  PlayResult.hs  Player.hs  Room.hs  Server.hs  Test.hs  Tiles.hs
src/Wordcrab/Brick/: Attributes.hs  ClientState.hs  Widgets.hs
src/Wordcrab/GameState/: Event.hs  Play.hs
src/Wordcrab/Player/: Id.hs  Waiting.hs
