cabal-version:      2.4
name:               wordcrab
version:            1.0.0
synopsis:           An implementation of Scrabble
license:            GPL-3.0-or-later
author:             Emily Bourke
copyright:          Emily Bourke
maintainer:         undergroundquizscene@protonmail.com

extra-source-files:
    README.md
    ChangeLog.md

library
  exposed-modules:
      Wordcrab.API
      Wordcrab.Board
      Wordcrab.Brick
      Wordcrab.Brick.Attributes
      Wordcrab.Brick.Widgets
      Wordcrab.Client
      Wordcrab.GameState
      Wordcrab.GameState.Event
      Wordcrab.GameState.Play
      Wordcrab.Player
      Wordcrab.Player.Id
      Wordcrab.Player.Waiting
      Wordcrab.PlayResult
      Wordcrab.Room
      Wordcrab.Server
      Wordcrab.Test
      Wordcrab.Tiles
  other-modules:
      Paths_wordcrab
  hs-source-dirs:
      src
  build-depends:
      aeson,
      base,
      brick,
      bytestring,
      containers,
      haskell-language-server,
      http-client,
      http-types,
      io-streams,
      lens,
      network,
      random,
      random-shuffle,
      servant,
      servant-client,
      servant-server,
      text,
      transformers,
      vector,
      vty,
      wai-extra,
      warp
  default-language: Haskell2010

executable wordcrab-exe
  main-is: Main.hs
  other-modules:
      Paths_wordcrab
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      wordcrab,
      aeson,
      base,
      brick,
      bytestring,
      containers,
      http-client,
      http-types,
      io-streams,
      lens,
      network,
      random,
      random-shuffle,
      servant,
      servant-client,
      servant-server,
      text,
      transformers,
      vector,
      vty,
      wai-extra,
      warp
  default-language: Haskell2010
